# PyController

./: README.md  pyc  pyproject.toml  requirements.txt  setup.py
PyController/: ArgumentWrapper.py  DeviceWorker.py  Devices.py  DevicesManager.py  GameMonitor.py  KeyMap.py  PyController.py  PyDevices.py  SettingsManager.py  __init__.py  main.yaml
PyController/devices.d/: Belkinn50.yaml  Belkinn52.yaml  LogitechF310.yaml  LogitechG610.yaml  XboxOne.yaml  exampleDevice.yaml  nostromo.yaml  tartarus.yaml  tartarusv2.yaml
PyController/profiles.d/: default.yaml  exampleProfile.yaml  exampleProfle.yaml
PyGamePad/: ConfigLoader.py  DeviceWorker.py  Devices.py  KeyMap.py  main.yaml  pygamepad.py
PyGamePad/devices.d/: nostromo.yaml
